# Spirit-Math

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  rename.py
benchmarks/: CMakeLists.txt  benchmark.cpp  matrixMul.cpp
cmake/: benchmarking.cmake  plot.py
docs/: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp
include/SPIRIT/: Math.hpp  Module.hpp
include/SPIRIT/Batch/: Batch.hpp
include/SPIRIT/Math/Batch/: Batch.hpp
include/SPIRIT/Math/Matrix/: Matrix.hpp
include/SPIRIT/Math/Random/: Random.hpp  Random_inl.hpp
include/SPIRIT/Math/Transform/: Transform.hpp
include/SPIRIT/Matrix/: Matrix.hpp
include/SPIRIT/Random/: Random.hpp  Random_inl.hpp
include/SPIRIT/Transform/: Transform.hpp
src/SPIRIT/Component/: CMakeLists.txt  module.cpp
test/: CMakeLists.txt  testFeature.cpp  testMatrix.cpp  testTransform.cpp
